# vault-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  AUTHENTICATION.md  CHANGELOG.md  DEPLOYMENT.md
src/vault_mcp/: __init__.py  auth.py  config.py  external.py  guards.py  notes.py  server.py  taxonomy.py
tests/: test_auth.py  test_external.py  test_guards.py  test_notes.py  test_server.py
